tests/errors/frontend/type/branches.fpcore
(FPCore (x)
 (if (> x 0)
     (let ([c 1/2])
       (* c x))
     FALSE))
